# CascadeCVSystem

./: Makefile.am  README.md  configure.ac
src/: CascadeCVSDrawing.cpp  CascadeCVSDrawing.h  CascadeCVSEvaluationInterface.h  CascadeEx.cpp  CascadeImageMatchingConfig.h  DotPlot.h  RealTimePlot.h  config.h.in  cvDebug.h
src/CVSystem/: CVSEvaluation.h  CVSFilterImpl.h  CVSHelpFunctions.h  CVSScalePyramid.h  CVSSelectImpl.cpp  CVSSelectImpl.h  CVSTemplateUtilities.cpp  CVSTemplateUtilities.h  CVSWorkingSet.h  CVSystem.h  CVSystemImpl.h  CascadeDataStructures.cpp  CascadeDataStructures.h  CascadeSURFDescriptor.h  CascadeSURFDescriptorImpl.h  CascadeSURFOrientation.cpp  CascadeSURFOrientation.h  CompileConfig.h  GaussianKernel.h  filter_definitions.h  filter_impl.h
src/CVSystem/debug/: test_functions.h
src/image_signal/: Utility.cpp  Utility.h  box_filtering_impl.h  box_filtering_impl_test.h  box_filtering_type_decl.h  color_types.h  color_types_rgb.h  simple_image_signal.h  simple_image_signal_draw.h  simple_image_signal_function.h  simple_image_signal_structures.h  simple_image_signal_utility.cpp  simple_image_signal_utility.h  simple_template_image_signal.h
