
#AM_CPPFLAGS = MPTLLIBCPPFLAGS $(AM_CPPFLAGS)
bin_PROGRAMS = cvsystem

cvsystem_SOURCES = \
src/CascadeCVSDrawing.h \
src/cvDebug.h \
src/image_signal/simple_image_signal.h \
src/image_signal/simple_image_signal_draw.h \
src/image_signal/simple_image_signal_utility.h \
src/image_signal/color_types_rgb.h \
src/image_signal/Utility.h \
src/image_signal/simple_image_signal_function.h \
src/image_signal/simple_template_image_signal.h \
src/image_signal/box_filtering_type_decl.h \
src/image_signal/box_filtering_impl.h \
src/image_signal/Utility.cpp \
src/image_signal/simple_image_signal_utility.cpp \
src/image_signal/simple_image_signal_structures.h \
src/image_signal/box_filtering_impl_test.h \
src/image_signal/color_types.h \
src/testsystem.h \
src/DotPlot.h \
src/CascadeCVSEvaluationInterface.h \
src/CascadeEx.cpp \
src/CVSystem/CVSFilterImpl.h \
src/CVSystem/CVSEvaluation.h \
src/CVSystem/GaussianKernel.h \
src/CVSystem/filter_impl.h \
src/CVSystem/CVSWorkingSet.h \
src/CVSystem/link_map_2d.h \
src/CVSystem/CVSScalePyramid.h \
src/CVSystem/convex_hull_2d.h \
src/CVSystem/filter_definitions.h \
src/CVSystem/CascadeDataStructures.cpp \
src/CVSystem/debug/test_functions.h \
src/CVSystem/ccvs_select_interest_points.h \
src/CVSystem/InterestPointMap.h \
src/CVSystem/CVSTemplateUtilities.cpp \
src/CVSystem/CascadeDataStructures.h \
src/CVSystem/CVSystemImpl.h \
src/CVSystem/CompileConfig.h \
src/CVSystem/CVSSelectImpl.h \
src/CVSystem/CVSSelectImpl.cpp \
src/CVSystem/CVSTemplateUtilities.h \
src/CVSystem/CVSystem.h \
src/CVSystem/CVSHelpFunctions.h \
src/CascadeCVSDrawing.cpp \
src/RealTimePlot.h \
src/CascadeImageMatchingConfig.h \
src/CVSystem/CascadeSURFDescriptor.h \
src/CVSystem/CascadeSURFOrientation.cpp \
src/CVSystem/CascadeSURFOrientation.h \
src/config.h
